src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.header{
  color: #ffffff;
}
.page-content{
  background: url('/img/bg/Cwd-Web.png');
}

.mdl-layout__header{
  box-shadow:none;
  background: #ffffff;
  color: #c2c2c2;
}

.webcover{
  z-index: 1;
}

.submenu{
  color: #c2c2c2 !important;
}

/* Start Shapes*/
.Ellipse{
  position: absolute;
  z-index: 0;
  margin-left: -41px;
  margin-top: 270px;
}

.polygon1{
  /*margin-left: 268px;*/
  position: absolute;
  z-index: 0;
  margin-left: 300px;
  margin-top: 95px;
}

.shapepolygon{
  /*margin-left: 20%;*/
  /*margin-top: 19px;*/
  /*height: 84px;*/
  position: absolute;
  z-index: 0;
}

.Rectangle{
  position: absolute;
  z-index: 0;
  margin-left: 50%;
}

.Rectangle3{
  position: absolute;
  z-index: 0;
  margin-left: 87%;
  margin-top: 5%;
}

.ellipse2{
  position: absolute;
  z-index: 0;
  margin-left: 75%;
  margin-top: 43%;
}

.polygon3{
  position: absolute;
  z-index: 0;
  margin-top: 52%;
  margin-left: 85%;

}

.rectangle05{
  position: absolute;
  z-index: 0;
  margin-left: 94%;
  margin-top: 41%;
  height: 86%;
}

.Rectangle4{
  position: absolute;
  z-index: 0;
  margin-top: 1039px;
  margin-left: 400px;
}

.Rectangle6{
  position: absolute;
  z-index: 0;
  margin-top: 994px;
  width: 485px;
  margin-left: 194px;
}

.Polygon2{
  position: absolute;
  z-index: 0;
  margin-left: 46%;
  margin-top: 879px;
  height: 60px;
}

.Polygon22{
  position: absolute;
  z-index: 0;
  margin-left: 56%;
  margin-top: 2644px;
  height: 60px;
}

.Polygon33{
  position: absolute;
  z-index: 0;
  margin-left: 93%;
  margin-top: 2710px;
  height: 45px;
}

.Ellipse22{
  position: absolute;
  z-index: 0;
  margin-top: 2593px;
  margin-left: 287px;
}

.Polygon44{
  position: absolute;
  z-index: 0;
  margin-top: 2912px;
  margin-left: 287px;
  height: 120px;
}

.Rectangle1{
  position: absolute;
  z-index: 0;
  margin-top: 2821px;
  margin-left: 10px;
  height: 60px;
}

.Rectangle2{
  position: absolute;
  z-index: 0;
  margin-top: 2923px;
  margin-left: 1171px;
  height: 100px;
}
/* End Shapes*/

.newweb{
  margin-top: 10px;
  color: #f5822c;
  font-size: 43px;
  text-align: center;
}

.shape6{
  width: 89px;
  height: 3px;
  margin-left: 95px;
}

.shape5{
  height: 131px;
  margin-top: 180px;
  margin-left: 180px;
}

.nxtpro{
  font-size: 14px;
  color: #363636;
  text-align: center;
  margin-right: 321px;
}

.newwebcaption{
  margin-left: 94px;
  margin-top: 10px;
}

.getsbutton{
  margin-left: 95px;
  margin-top: 10px;
}

.laptop{
  margin-top: 116px;
  height: 378px;
}

.web{
  margin-top: 116px;
  /*margin-left: -358px;*/
}

.aboutpage{
  width: 100%;
}

.caption{
  margin-top: -109px;
  margin-left: 229px;
  color: #fff;
}

.logo{
  height: 165px;
  margin-top: 121px;
  margin-left: 130px;
}

.caption1{
  margin-left: 52px;
  margin-top: 35px;
}

/*.polygon3{*/
  /*height: 60px;*/
  /*margin-top: -854px;*/
  /*margin-left: 405px;*/
/*}*/

/* Start Features Design */
.features1{
  height: 188px;
  margin-top: 244px;
  margin-left: 100px;
  margin-bottom: 58px;
}

.features2{
  height: 188px;
  margin-top: 244px;
  margin-left: 130px;
  margin-bottom: 58px;
}

.features3{
  height: 188px;
  margin-top: 244px;
  margin-left: 130px;
  margin-bottom: 58px;
}

.oms{
  color: #f5822c;
  margin-left: 132px;
}

.omsfeatures1{
  margin-top: 20px;
  margin-left: 100px;
 }

.wd{
  color: #f5822c;
  margin-left: 185px;
}

.wdfeatures2{
  margin-top: 20px;
  margin-left: 130px;
}

.dg{
  color: #f5822c;
  margin-left: 189px;
}
.dgfeatures3{
  margin-top: 20px;
  margin-left: 120px;
}

/*END FEATURES DESIGN*/

/*Start Products Design*/
.photolivelogo{
  height: 209px;
  margin-left: 189px;
}

.photoliveinfo{
  margin-top: 20px;
  margin-left: 23px;
}

.products{
  padding-top: 88px;
}

.products1{
  font-size: 22px;
  padding-left: 22px;
  color: #f5822c;
}

.productbtn{
  margin-left: 20px;
}

.shape666{
  width: 66px;
  height: 2px;
  margin-top: 50px;
  margin-left: -100px;
}

/*end Products*/

/*Start Feedback*/
.feedbackgrid{
  background-color: #f8f8f8;
  height: 456px;
  margin-left: -5px;
  width: 1323px;
  margin-top: 105px;
}
.feedback{
  margin-top: 131px;
}

.titleqoute{
  font-size: 30px;
}

.feedback1{
  padding-top: 123px;
}

.cfeedback{
  font-size: 20px;
  margin-right: 168px;
  color: #f5822c;
  margin-left: 90px;
}

.shape6{
  width: 89px;
  height: 3px;
  margin-left: 95px;
}

.comments{
  margin-left: 90px;
}

.jonathan{
  height: 120px;
}

.photo{
  margin-left: 55px;
}

.name{
  margin-top: 46px;
  margin-left: -122px;
}

.qoute{
  font-size: 80px;
  color: #f5822c;
  font-size: 100px;
}

.clientqoute{
  margin-left: 64px;
}

.company{
  color: #f5822c;
}
/*end feedback*/

/* start free consultation*/
.consult{
  padding-top: 100px;
}
.consultation{
  /*margin-top: 298px;*/
}
.consultation1{
  width: 450px;
  margin-left: 116px;
}

.constitle{
  font-size: 20px;
  margin-right: 168px;
  color: #f5822c;
  margin-left: 90px;
}

.shape6666{
  width: 89px;
  height: 3px;
  margin-left: 95px;
}

.conscomments{
  margin-left: 90px;
}

.table{
  margin-top: -203px;
  margin-left: 800px;
}

/*form*/
.input{
  background-color: #f8f8f8;
}

#sample5{
  background-color: #f8f8f8;
}

.message{
  width: 100%;
}

.fname{
  margin-top: -38px;
}

.lname{
  margin-top: -38px;
}

.emailadd{
  margin-top: -38px;
}

.phone{
  margin-top: -38px;
}

.message1{
  margin-top: -38px;
}

.checkbtn{
  width: 50%;
  margin-left: 10px;
}

.submitbtn{
  width: 100%;
}
/* end free consultation*/

/*blue background*/
.bluebg{
  margin-left: -24px;
}
/*blue background*/

/*start Map*/
.map{
  height: 286px;
  width: 1358px;
  margin-top: -24px;
  margin-left: -15px;
}

.tmap{
  color: #f5822c;
}

.cwdmap{
  background-color: #fff;
  width: 30%;
  z-index: 1;
  position: absolute;
  padding: 30px;
  margin-left: -16px;
}

.drop{
  color: #f5822c;
}

.cwdadd{
  /*margin-left: -301px;*/
  margin-top: 22px;
}

.mapshape{
  margin-top: 30px;
  margin-left: -159px;
  width: 89px;
  height: 3px;
}

/*end Map*/

/*start Footer*/
.footer{
  margin-top: -25px;
  margin-left: -16px;
}

.footer1{
  height: 286px;
  width: 1358px;
}

.footerlabel{
  margin-top: -219px;
  color: #fff;
  padding-left: 179px;
}

.footerlabel1{
  margin-top: -219px;

}

.fbicon{
  height: 38px;
  margin-left: 80%;
}

.twittericon{
  height: 38px;
  margin-left: 80%;
}

.twitter{
  margin-top: -14px;
}

.youtubeicon{
  height: 38px;
  margin-left: 80%;
}

.youtube{
  margin-top: -14px;
}

.socialmedia{
  margin-top: -243px;
}

.tandc{
  margin-top: 19px;
  color: #fff;
  font-size: 12px;
}

.blog{
  margin-top: 19px;
  color: #fff;
  font-size: 12px;
}

.footercontact{
  margin-top: 19px;
  color: #fff;
  font-size: 12px;
}

.worklabel{
  font-size: 25px;
}

.footercopyright{
  margin-top: 40px;
}
/**end Footer*!*/

